# pylearn

./: README.md  arg_parse.py  asyncio.py  builtinsfunctions.py  class.py  collection.py  conditionals.py  context.py  data_types.py  databases.py  function.py  functionstools.py  generators.py  imports.py  indexgen.py  iterators.py  loops.py  main.py  notes.txt  op.py  pyproject.toml  requirements.txt  requirements_dev.txt  sequence.txt  setup.py  strings.py  testing.py  threads.py  typehint.py  vars.py
data_types/: data_types.py
ds/: dic.py  list.py  set.py  tuple.py
notebooks/: PCA.ipynb  calculus.ipynb  image_svd.ipynb  lda.ipynb  linear_regression.ipynb  logictic_regression.ipynb  matrix.ipynb  optimization.ipynb  vuln.ipynb
notebooks/datascience/: numpy.ipynb
notebooks/datascience/pandas/: dataframe.ipynb  series.ipynb
notebooks/machinelearning/: PCA.ipynb  SVD_LRA.ipynb  calculus.ipynb  lda.ipynb  matrix.ipynb  optimization.ipynb  svm.ipynb  vector.ipynb  vuln.ipynb
notebooks/visualisation/: matplot_lib.ipynb  seaborn.ipynb
