[tool.poetry]
name = "pylearn"
version = "0.1.0"
description = "first python project"
authors = ["Anand Upadhyay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
urllib3 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
